--- a/assets/themes/FlatSIS/stylesheet_wkhtmltopdf.css
+++ b/assets/themes/FlatSIS/stylesheet_wkhtmltopdf.css
@@ -11,6 +11,9 @@
 @import url("../WPadmin/stylesheet_wkhtmltopdf.css");
 /* Replace the modules icons */
 
+.module-icon.Abroad {
+	background-image: url("modules/Abroad.png");
+}
 .module-icon.Accounting {
 	background-image: url("modules/Accounting.png");
 }
