#14 change title "Abroad" for "Mobility"

--- a/assets/themes/FlatSIS/stylesheet.css
+++ b/assets/themes/FlatSIS/stylesheet.css
@@ -10,7 +10,7 @@
 @import url("../WPadmin/stylesheet.css");
 /* Replace the modules icons */
 
-.module-icon.Abroad {
+.module-icon.Mobility {
 	background-image: url("modules/Abroad.png");
 }
 .module-icon.Accounting {
