--- a/assets/themes/WPadmin/css/icons.css
+++ b/assets/themes/WPadmin/css/icons.css
@@ -13,7 +13,7 @@
 	vertical-align: middle;
 }
 
-.module-icon.Abroad {
+.module-icon.Mobility {
 	background-image: url("modules/Abroad.png");
 }
 .module-icon.Accounting {
